# abc_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  gen_cmake.py  parse-module-makefiles.py  vcpkg.json
.github/workflows/: build.yml
abc-mini/: .gitignore  CMakeLists.txt  LICENSE-MIT  abc_c_sources.txt  bootstrap.py  justfile  smoke_test.cpp
abc-mini/include/abc-mini-c/: BlifReader.h  Diagnostics.h  ExternC.h  Network.h  Types.h
abc-mini/lib/: Assert.h  BlifReader.cpp  CMakeLists.txt  Diagnostics.cpp  DiagnosticsImpl.h  Log.h
abc-mini/scripts/: bootstrap.py  deptool.py  pyproject.toml
abc-mini/tools/: bootstrap.py  deptool.py  pyproject.toml
abc-mini/tools/deptool/: Cargo.toml
abc-mini/tools/deptool-rs/: Cargo.toml
abc-mini/tools/deptool-rs/src/: main.rs
abc-mini/tools/deptool/src/: main.rs
cmake/modules/: AddABC.cmake  FindReadline.cmake
src/: CMakeLists.txt  libabc.c
src/aig/: CMakeLists.txt
src/aig/aig/: CMakeLists.txt
src/aig/gia/: CMakeLists.txt  giaKf.c  giaStoch.c  giaTranStoch.c
src/aig/hop/: CMakeLists.txt
src/aig/ioa/: CMakeLists.txt
src/aig/ivy/: CMakeLists.txt
src/aig/miniaig/: ndr.h
src/aig/saig/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/abc/: CMakeLists.txt
src/base/abci/: CMakeLists.txt  abc.c
src/base/acb/: CMakeLists.txt
src/base/bac/: CMakeLists.txt
src/base/cba/: CMakeLists.txt
src/base/cmd/: CMakeLists.txt  cmd.c  cmdHist.c  cmdLoad.c
src/base/exor/: CMakeLists.txt
src/base/io/: CMakeLists.txt  ioReadAiger.c  ioReadBlifMv.c  ioWriteAiger.c
src/base/main/: CMakeLists.txt  abcapis.h
src/base/pla/: CMakeLists.txt
src/base/test/: CMakeLists.txt
src/base/ver/: CMakeLists.txt
src/base/wlc/: CMakeLists.txt
src/base/wln/: CMakeLists.txt
src/bdd/extrab/: extraBdd.h
src/bool/: CMakeLists.txt
src/bool/bdc/: CMakeLists.txt
src/bool/dec/: CMakeLists.txt
src/bool/kit/: CMakeLists.txt  cloud.h  kitPerm.c  module.make
src/bool/lucky/: CMakeLists.txt  luckyInt.h
src/bool/rpo/: CMakeLists.txt
src/bool/rsb/: CMakeLists.txt
src/map/: CMakeLists.txt
src/map/amap/: CMakeLists.txt
src/map/cov/: CMakeLists.txt
src/map/fpga/: fpgaInt.h
src/map/if/: CMakeLists.txt  ifDsd.c  ifLibLut.c
src/map/mapper/: CMakeLists.txt
src/map/mio/: CMakeLists.txt
src/map/mpm/: CMakeLists.txt
src/map/scl/: CMakeLists.txt
src/map/super/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/misc/bar/: CMakeLists.txt  bar.h
src/misc/bbl/: CMakeLists.txt  bblif.h
src/misc/bzlib/: CMakeLists.txt
src/misc/extra/: CMakeLists.txt  extra.h  extraZddTrunc.c
src/misc/hash/: hash.h
src/misc/mem/: CMakeLists.txt
src/misc/mvc/: CMakeLists.txt
src/misc/nm/: CMakeLists.txt
src/misc/parse/: CMakeLists.txt
src/misc/st/: CMakeLists.txt
src/misc/tim/: CMakeLists.txt
src/misc/util/: CMakeLists.txt  abc_global.h
src/misc/zlib/: CMakeLists.txt
src/opt/: CMakeLists.txt
src/opt/cgt/: CMakeLists.txt
src/opt/csw/: CMakeLists.txt
src/opt/cut/: CMakeLists.txt
src/opt/dar/: CMakeLists.txt
src/opt/dau/: CMakeLists.txt
src/opt/dsc/: CMakeLists.txt
src/opt/fret/: CMakeLists.txt  module.make
src/opt/fxch/: CMakeLists.txt
src/opt/fxu/: CMakeLists.txt
src/opt/lpk/: CMakeLists.txt
src/opt/mfs/: CMakeLists.txt
src/opt/nwk/: CMakeLists.txt
src/opt/res/: CMakeLists.txt
src/opt/ret/: CMakeLists.txt
src/opt/rwr/: CMakeLists.txt
src/opt/rwt/: CMakeLists.txt
src/opt/sbd/: CMakeLists.txt
src/opt/sfm/: CMakeLists.txt
src/opt/sim/: CMakeLists.txt
src/proof/: CMakeLists.txt
src/proof/abs/: CMakeLists.txt
src/proof/acec/: CMakeLists.txt
src/proof/cec/: CMakeLists.txt  cecProve.c  cecSplit.c
src/proof/dch/: CMakeLists.txt
src/proof/fra/: CMakeLists.txt
src/proof/fraig/: CMakeLists.txt
src/proof/int/: CMakeLists.txt
src/proof/live/: CMakeLists.txt
src/proof/pdr/: CMakeLists.txt
src/proof/ssc/: CMakeLists.txt
src/proof/ssw/: CMakeLists.txt  sswPart.c
src/sat/: CMakeLists.txt
src/sat/bmc/: CMakeLists.txt
src/sat/bsat/: CMakeLists.txt  satStore.h
src/sat/bsat2/: MainSat.cpp  MainSimp.cpp
src/sat/cnf/: CMakeLists.txt  cnfMan.c  cnfUtil.c
src/sat/csat/: CMakeLists.txt
src/sat/glucose/: CMakeLists.txt  Glucose.cpp  ParseUtils.h
src/sat/glucose2/: CMakeLists.txt  Glucose2.cpp  ParseUtils.h
src/sat/msat/: CMakeLists.txt
src/sat/proof/: pr.h
src/sat/satoko/: CMakeLists.txt
src/sat/xsat/: CMakeLists.txt
