add_subdirectory(abc)
add_subdirectory(abci)
add_subdirectory(cmd)
add_subdirectory(io)
add_subdirectory(main)
add_subdirectory(exor)
add_subdirectory(ver)
add_subdirectory(wlc)
add_subdirectory(wln)
add_subdirectory(acb)
add_subdirectory(bac)
add_subdirectory(cba)
add_subdirectory(pla)
add_subdirectory(test)
