add_subdirectory(cut)
add_subdirectory(fxu)
add_subdirectory(fxch)
add_subdirectory(rwr)
add_subdirectory(mfs)
add_subdirectory(sim)
add_subdirectory(ret)
add_subdirectory(fret)
add_subdirectory(res)
add_subdirectory(lpk)
add_subdirectory(nwk)
add_subdirectory(rwt)
add_subdirectory(cgt)
add_subdirectory(csw)
add_subdirectory(dar)
add_subdirectory(dau)
add_subdirectory(dsc)
add_subdirectory(sfm)
add_subdirectory(sbd)
